Revert "CIV-7675 Fix GA code smell blocker & critical in Sonarcloud (#978)" (#981)
This reverts commit fa0b5d8734925e8dfcdfdec145614f643761115c.