@@ -1,5 +1,6 @@
 package uk.gov.hmcts.reform.civil.controllers;
 
+import com.google.common.collect.ImmutableMap;
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
 import lombok.AllArgsConstructor;
@@ -20,7 +21,6 @@ import uk.gov.hmcts.reform.civil.callback.CallbackType;
 import uk.gov.hmcts.reform.civil.callback.CallbackVersion;
 import uk.gov.hmcts.reform.civil.helpers.CaseDetailsConverter;
 
-import java.util.Map;
 import java.util.Optional;
 import javax.validation.constraints.NotNull;
 
@@ -59,7 +59,7 @@ public class CallbackController {
         CallbackParams callbackParams = CallbackParams.builder()
             .request(callback)
             .type(CallbackType.fromValue(callbackType))
-            .params(Map.of(CallbackParams.Params.BEARER_TOKEN, authorisation))
+            .params(ImmutableMap.of(CallbackParams.Params.BEARER_TOKEN, authorisation))
             .version(version.orElse(null))
             .pageId(pageId.orElse(null))
             .caseData(caseDetailsConverter.toCaseData(callback.getCaseDetails()))
